# containerize-streamlit-with-chatbot-app

./: .adalab-config.json  Containerfile  README.md  pyproject.toml
streamlit_app/: __init__.py  app.py  components.py  utils.py
tests/: test_app.py  test_utils.py
