[tool.poetry]
name = "streamlit-chatbot"
version = "0.1.0"
description = "A feature-rich Streamlit app with a chatbot"
authors = ["Victor Valera"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
pandas = "^2.2.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"